...
      <Tab.Screen
        name="Caisse"
        component={CashierHomeScreen}
        options={{ tabBarIcon: makeTabIcon(TabIconCash) }}
      />
      <Tab.Screen
        name="Vente"
        component={SellTicketScreen}
        options={{ tabBarIcon: makeTabIcon(TabIconSell) }}
      />
      <Tab.Screen
        name="Billets"
        component={CashierTicketsScreen}
...
